Fix aligning sorted table headers JC-543

--- a/apps/angular/src/app/features/anime/anime-dashboard/anime-dashboard.component.css
+++ b/apps/angular/src/app/features/anime/anime-dashboard/anime-dashboard.component.css
@@ -32,6 +32,10 @@
   justify-content: center;
 }
 
+::ng-deep .mat-sort-header-container {
+  justify-content: center;
+}
+
 @media (width <= 360px) {
   .anime-filters {
     flex-direction: column;
